Class.newInstance is up-to-date now